--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_script:
   - cd ..
   - git clone --single-branch --branch $TYPO3_BRANCH --depth 1 https://github.com/TYPO3/TYPO3.CMS.git typo3_core
   - mv typo3_core/* .
-  - composer require "typo3-ci/typo3cms:dev-master" "typo3-ci/typo3sniffpool:dev-master"
+  - composer require --no-update "typo3-ci/typo3cms:dev-master" "typo3-ci/typo3sniffpool:dev-master"
   - composer install
   - ls
   - mkdir -p uploads typo3temp typo3conf/ext
@@ -45,3 +45,5 @@ script:
             exit 99;
         fi
     "
+  ->
+    ./bin/phpcs --standard=TYPO3CMS typo3conf/ext/themes_manager/
